Bug 494389 - Custom images in Kickoff are undesirably scaled down
Summary: Custom images in Kickoff are undesirably scaled down
Status: RESOLVED FIXED
Alias: None
Product: plasmashell
Classification: Plasma
Component: Application Launcher (Kickoff) widget (other bugs)
Version First Reported In: 6.1.5
Platform: Gentoo Packages Linux
: NOR minor
Target Milestone: 1.0
Assignee: Plasma Bugs List
URL:
Keywords: regression
Depends on:
Blocks:
 
Reported: 2024-10-10 05:28 UTC by pascorp
Modified: 2025-02-07 16:05 UTC (History)
3 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description pascorp 2024-10-10 05:28:16 UTC
SUMMARY
The image for the application launch menu button cannot be selected.

STEPS TO REPRODUCE
Select start.png (https://ibb.co/Dt46Gzy)
Press Apply
OBSERVED RESULT
bug (https://ibb.co/NmnZpSq)
+the button size does not adjust to the height of the image (only to the width)
EXPECTED RESULT
The selected image is displayed on the button (it was like that in version 5...)

SOFTWARE/OS VERSIONS
Linux/KDE Plasma: Gentoo (actual)
KDE Plasma Version: 6.1.5
KDE Frameworks Version: 6.6.0
Qt Version: 6.7.2
versions (https://ibb.co/4s8gf9w)
Comment 1 pascorp 2024-10-13 10:26:24 UTC
After changing the icon theme, the selected image began to be displayed. But the size of the button still adjusts only to the width of the image.
Previously, the Windonw (nw) icon theme was selected, changed to Breez
Comment 2 Bug Janitor Service 2024-11-28 10:24:39 UTC
A possibly relevant merge request was started @ https://invent.kde.org/frameworks/kirigami/-/merge_requests/1672
Comment 3 Bug Janitor Service 2025-02-03 14:46:38 UTC
A possibly relevant merge request was started @ https://invent.kde.org/plasma/plasma-desktop/-/merge_requests/2789
Comment 4 Niccolò Venerandi 2025-02-07 16:05:34 UTC
Git commit 66f584808174710ac2519eace363ac0ecc7b8c22 by Niccolò Venerandi.
Committed on 07/02/2025 at 16:03.
Pushed by niccolove into branch 'master'.

Use Image for user-selected non-square Kickoff icons

If the user selects an image as teh source for Kickoff
icon we fallback on using Image, since Kirigami.Icon does
not support non-square icons.

M  +21   -3    applets/kickoff/package/contents/ui/main.qml

https://invent.kde.org/plasma/plasma-desktop/-/commit/66f584808174710ac2519eace363ac0ecc7b8c22
Comment 5 Niccolò Venerandi 2025-02-07 16:05:46 UTC
Git commit 3177f63ae4c0f6b029723c75e892184ce0ec30de by Niccolò Venerandi.
Committed on 07/02/2025 at 16:05.
Pushed by niccolove into branch 'Plasma/6.3'.

Use Image for user-selected non-square Kickoff icons

If the user selects an image as teh source for Kickoff
icon we fallback on using Image, since Kirigami.Icon does
not support non-square icons.


(cherry picked from commit 66f584808174710ac2519eace363ac0ecc7b8c22)

Co-authored-by: Niccolò Venerandi <niccolo@venerandi.com>

M  +21   -3    applets/kickoff/package/contents/ui/main.qml

https://invent.kde.org/plasma/plasma-desktop/-/commit/3177f63ae4c0f6b029723c75e892184ce0ec30de