Do not use kiconengine for absolue path icons

On applications, QIcon should use the kiconthemes engine under
the hood, unless the icon is an absolute path, in which case
it's not necessary. Calling m_theme->iconFromTheme allows us
to set the tint colors, but it will force us to use kiconthemes,
which does not work for e.g. absolute path to a png image.
We restore the absolute path exception here.

BUG:494389